# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,0 +1,10 @@
+interface ICreateUserDTO {
+  name: string,
+  email: string,
+  password: string,
+  id?:string,
+  status?:string,
+  user_type_id: string;
+}
+
+export { ICreateUserDTO }
