# src/modules/accounts/useCases/createUser/CreateUseController.ts
@@ -1,0 +1,30 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { CreateUserUseCase } from './CreateUserUseCase';
+
+class CreateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const {
+      name,
+      email,
+      password,
+      user_type_id
+    } = request.body;
+
+
+    const createUserUseCase = container.resolve(CreateUserUseCase);
+
+   await createUserUseCase.execute({
+      name,
+      email,
+      password,
+      user_type_id
+    });
+    
+    return response.status(201).send();
+  }
+}
+
+export { CreateUserController }
+
